[package]
name = "radiooooo"
version = "0.1.0"
authors = ["slashformotion <slashformotion@protonmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0.86"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
libmpv2 = "4.0.0"
ratatui = "0.27.0"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
